<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bn_item_home">

    <fragment
        android:id="@+id/bn_item_home"
        android:name="com.example.epub.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/bn_item_categories"
        android:name="com.example.epub.fragment.CategoriesFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/bn_item_user"
        android:name="com.example.epub.fragment.UserFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_user" />
</navigation>