<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp245"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp5">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_book_cover"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/shadow_bottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignBottom="@+id/iv_book_cover"
            android:src="@drawable/bottom_shadow"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progress_load_image"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" />

        <FrameLayout
            android:id="@+id/layoutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_book_cover"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="@dimen/dp5"
            android:background="@drawable/round_white">

            <ImageView
                android:layout_width="@dimen/dp15"
                android:layout_height="@dimen/dp15"
                android:layout_margin="@dimen/dp1"
                android:src="@drawable/ic_book_rate"
                android:tint="@color/color_yellow"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_book_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp5"
                android:text="@string/tv_book_rate"
                android:textColor="@color/color_black" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_book_cover"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginEnd="@dimen/dp5"
            android:ellipsize="marquee"
            android:fontFamily="sans-serif-light"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/tv_book_name"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_name"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:ellipsize="marquee"
            android:fontFamily="sans-serif-light"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/tv_book_author"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp15" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>